test/mutation_analysis/s0091_decode_ways/hafis/starchat/mutants/9/result.txt
./test/mutation_analysis/s0091_decode_ways/hafis/starchat/mutants/9/Solution.java:41: error: unreachable statement
        return f[n];
        ^
1 error
